# shopkeeper

./: .gitignore  README.md  notes.md  schema-pulumi-shopkeeper.json
.devcontainer/: Dockerfile  dev.Dockerfile  devcontainer.json  jaketbouma.postStartCommand.sh  kitchen_sink.Dockerfile
docs/: 2025-05 Notes on args.md
example/: Pulumi.yaml  pulumi.yaml
example/marketplace/: Pulumi.yaml
example/tomato-farmer/: Pulumi.yaml
examples/butternut-farmer/: Pulumi.yaml
examples/fishmarket/: Pulumi.yaml  README.md
examples/issue-BucketObjectV2-overwrites/: Pulumi.yaml  something-manually-uploaded.json
examples/marketplace/: Pulumi.yaml
examples/nothing/: Pulumi.yaml
examples/ships/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml
pulumi-shopkeeper/: PulumiPlugin.yaml  __main__.py  pyproject.toml
pulumi-shopkeeper/examples/: Pulumi.yaml
pulumi-shopkeeper/integration_tests/: test_example.py  test_market.py  test_producer.py  test_producers.py
pulumi-shopkeeper/shopkeeper/: README.md  aws_market.py  backend_factory.py  backend_interface.py  base_market.py  base_producer.py  component_factory.py  components.py  components.py.jinja  factory.py  market.py  market_backend.py  nothing.py  shopkeeper.py
pulumi-shopkeeper/shopkeeper/aws/: market.py  producer.py
pulumi-shopkeeper/shopkeeper/local/: market.py  producer.py
pulumi-shopkeeper/shopkeeper/old/: backend_interface.py  component_generator.py  test_market.py  test_producer.py
pulumi-shopkeeper/tests/: destroy_test_stacks.py  test_aws.py  test_components.py  test_generator.py  test_local.py  test_market.py  test_markets.py  test_producer.py  test_programs.py  test_shopkeeper.py
pulumi-shopkeeper/tests/yaml_test_programs/aws-market-V1/market/: Pulumi.yaml
pulumi-shopkeeper/tests/yaml_test_programs/aws-market-V1/producer/: Pulumi.yaml
pulumi-shopkeeper/tests/yaml_test_programs/aws-veg-market/: Pulumi.market.yaml  Pulumi.producer.yaml  Pulumi.yaml
pulumi-shopkeeper/tests/yaml_test_programs/aws-veg-market/market/: Pulumi.yaml
pulumi-shopkeeper/tests/yaml_test_programs/aws-veg-market/producer/: Pulumi.yaml
pulumi-shopkeeper/tests/yaml_test_programs/fishermanfred/: Pulumi.yaml
pulumi-shopkeeper/tests/yaml_test_programs/fishmarket/: Pulumi.yaml
pulumi-shopkeeper/unit_tests/: test_components.py
