[tool.poetry]
name = "shopkeeper"
version = "0.0.0"
description = "Simple example of Pulumi components with Poetry and Pytest"
authors = ["Jake Bouma"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.167.0"
pulumi-aws = "^6.79.2"
boto3 = "^1.38.8"
pulumi-std = "^2.2.0"
pyserde = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
debugpy = "^1.8.14"
ruff = "^0.11.9"
pycodestyle = "^2.13.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -p no:warnings"
filterwarnings = [
    "ignore::DeprecationWarning:aws.*:"
]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 88